# product_classification

./: .gitignore  Dockerfile  README.md  post_install.sh  pyproject.toml  scripts.py
doc/source/content/: algorithm.md  next.md
notebooks/: baseline.ipynb
product_classification/: baseline.ipynb  cnn.ipynb  data_processing_flow.py  split_dataset.ipynb  train_cnn_flow.py
product_classification/conf/: config.yml
product_classification/product_classification/: __init__.py  utils.py
product_classification/product_classification/data_processing/: __init__.py  create_dataset.py  text_processing.py  train_test_val_split.py
product_classification/product_classification/data_processing.py/: create_dataset.py
product_classification/product_classification/learner/: __init__.py  learner.py  train.py
product_classification/product_classification/learner/metrics/: __init__.py
product_classification/product_classification/models/: __init__.py  cnns.py  mlp.py
