[tool.poetry]
name = "product_classification"
version = "1.0.0"
description = "Python project classifing products based on ."
authors = [
    "Barthélémy Pavy <barthelemy.pavy@gmail.com>"
]

readme = "README.md"

[tool.poetry.scripts]

# development helpers
fmt = "scripts:fmt"

# dependencies of the `ci:cd`
lint = "scripts:lint"
test = "scripts:test"

download_data = "scripts:download_data"
nltk_resources = "scripts:download_nltk_resources"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
metaflow = "^2.7.2"
types-PyYAML = "^6.0.10"
nltk = "^3.7"
fire = "^0.4.0"
pandasql = "^0.7.3"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pylava = "^0.3.0"
pylint = "^2.14.4"
mypy = "^0.961"
halo = "^0.0.31"
jupyterlab = "^3.4.3"
wordcloud = "^1.8.2"
seaborn = "^0.11.2"
plotly = "^5.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
